y.output
   0  $accept : strt $end

   1  strt : strt_

   2  strt_ :
   3        | external_declaration strt_

   4  external_declaration : function_definition
   5                       | declaration

   6  declaration : data_type id semi

   7  declaration_list : declaration
   8                   | declaration declaration_list

   9  function_definition : data_type id left_parenthesis right_parenthesis compound_stmts

  10  compound_stmts : left_brace right_brace
  11                 | left_brace stmt_list right_brace

  12  stmt_list :
  13            | stmt stmt_list

  14  stmt : declaration_list
  15       | compound_stmts
  16       | conditional_stmt
  17       | iteration_stmt
  18       | expr semi

  19  conditional_stmt : IF left_parenthesis expr right_parenthesis stmt

  20  expr : number
  21       | id
  22       | number operator expr
  23       | id operator expr
  24       | id left_parenthesis right_parenthesis

  25  operator : assignment_op
  26           | relational_op
  27           | binary_op
  28           | error

  29  assignment_op : '='

  30  relational_op : '<'
  31                | '>'

  32  binary_op : '+'
  33            | '-'
  34            | '*'
  35            | '/'
  36            | '%'

  37  semi : ';'
  38       | error

  39  data_type : DATA_TYPE
  40            | error

  41  id : ID
  42     | error

  43  integer : INTEGER
  44          | error

  45  number : INTEGER
  46         | FLOATING_POINT
  47         | error

  48  left_parenthesis : '('
  49                   | error

  50  right_parenthesis : ')'
  51                    | error

  52  left_brace : '{'
  53             | error

  54  right_brace : '}'
  55              | error

  56  left_bracket : '['
  57               | error

  58  right_bracket : ']'
  59                | error

  60  comma : ','
  61        | error

state 0
	$accept : . strt $end  (0)
	strt_ : .  (2)

	error  shift 1
	DATA_TYPE  shift 2
	$end  reduce 2

	strt  goto 3
	strt_  goto 4
	external_declaration  goto 5
	function_definition  goto 6
	declaration  goto 7
	data_type  goto 8


state 1
	data_type : error .  (40)

	.  reduce 40


state 2
	data_type : DATA_TYPE .  (39)

	.  reduce 39


state 3
	$accept : strt . $end  (0)

	$end  accept


state 4
	strt : strt_ .  (1)

	.  reduce 1


state 5
	strt_ : external_declaration . strt_  (3)
	strt_ : .  (2)

	error  shift 1
	DATA_TYPE  shift 2
	$end  reduce 2

	strt_  goto 9
	external_declaration  goto 5
	function_definition  goto 6
	declaration  goto 7
	data_type  goto 8


state 6
	external_declaration : function_definition .  (4)

	.  reduce 4


state 7
	external_declaration : declaration .  (5)

	.  reduce 5


state 8
	declaration : data_type . id semi  (6)
	function_definition : data_type . id left_parenthesis right_parenthesis compound_stmts  (9)

	error  shift 10
	ID  shift 11
	.  error

	id  goto 12


state 9
	strt_ : external_declaration strt_ .  (3)

	.  reduce 3


state 10
	id : error .  (42)

	.  reduce 42


state 11
	id : ID .  (41)

	.  reduce 41


state 12
	declaration : data_type id . semi  (6)
	function_definition : data_type id . left_parenthesis right_parenthesis compound_stmts  (9)

	error  shift 13
	';'  shift 14
	'('  shift 15
	.  error

	semi  goto 16
	left_parenthesis  goto 17


13: reduce/reduce conflict (reduce 38, reduce 49) on error
state 13
	semi : error .  (38)
	left_parenthesis : error .  (49)

	$end  reduce 38
	error  reduce 38
	DATA_TYPE  reduce 38
	')'  reduce 49


state 14
	semi : ';' .  (37)

	.  reduce 37


state 15
	left_parenthesis : '(' .  (48)

	.  reduce 48


state 16
	declaration : data_type id semi .  (6)

	.  reduce 6


state 17
	function_definition : data_type id left_parenthesis . right_parenthesis compound_stmts  (9)

	error  shift 18
	')'  shift 19
	.  error

	right_parenthesis  goto 20


state 18
	right_parenthesis : error .  (51)

	.  reduce 51


state 19
	right_parenthesis : ')' .  (50)

	.  reduce 50


state 20
	function_definition : data_type id left_parenthesis right_parenthesis . compound_stmts  (9)

	error  shift 21
	'{'  shift 22
	.  error

	compound_stmts  goto 23
	left_brace  goto 24


state 21
	left_brace : error .  (53)

	.  reduce 53


state 22
	left_brace : '{' .  (52)

	.  reduce 52


state 23
	function_definition : data_type id left_parenthesis right_parenthesis compound_stmts .  (9)

	.  reduce 9


24: shift/reduce conflict (shift 25, reduce 12) on error
24: shift/reduce conflict (shift 30, reduce 12) on '}'
state 24
	compound_stmts : left_brace . right_brace  (10)
	compound_stmts : left_brace . stmt_list right_brace  (11)
	stmt_list : .  (12)

	error  shift 25
	ID  shift 11
	DATA_TYPE  shift 2
	IF  shift 26
	FLOATING_POINT  shift 27
	INTEGER  shift 28
	iteration_stmt  shift 29
	'{'  shift 22
	'}'  shift 30

	declaration  goto 31
	data_type  goto 32
	id  goto 33
	declaration_list  goto 34
	compound_stmts  goto 35
	left_brace  goto 24
	right_brace  goto 36
	stmt_list  goto 37
	stmt  goto 38
	conditional_stmt  goto 39
	expr  goto 40
	number  goto 41


25: reduce/reduce conflict (reduce 40, reduce 42) on error
25: reduce/reduce conflict (reduce 40, reduce 47) on error
25: reduce/reduce conflict (reduce 40, reduce 53) on error
25: reduce/reduce conflict (reduce 40, reduce 55) on error
25: reduce/reduce conflict (reduce 40, reduce 53) on ID
25: reduce/reduce conflict (reduce 40, reduce 55) on ID
25: reduce/reduce conflict (reduce 53, reduce 55) on DATA_TYPE
25: reduce/reduce conflict (reduce 53, reduce 55) on IF
25: reduce/reduce conflict (reduce 53, reduce 55) on FLOATING_POINT
25: reduce/reduce conflict (reduce 53, reduce 55) on INTEGER
25: reduce/reduce conflict (reduce 53, reduce 55) on iteration_stmt
25: reduce/reduce conflict (reduce 42, reduce 47) on '='
25: reduce/reduce conflict (reduce 42, reduce 47) on '<'
25: reduce/reduce conflict (reduce 42, reduce 47) on '>'
25: reduce/reduce conflict (reduce 42, reduce 47) on '+'
25: reduce/reduce conflict (reduce 42, reduce 47) on '-'
25: reduce/reduce conflict (reduce 42, reduce 47) on '*'
25: reduce/reduce conflict (reduce 42, reduce 47) on '/'
25: reduce/reduce conflict (reduce 42, reduce 47) on '%'
25: reduce/reduce conflict (reduce 42, reduce 47) on ';'
25: reduce/reduce conflict (reduce 53, reduce 55) on '{'
25: reduce/reduce conflict (reduce 53, reduce 55) on '}'
state 25
	data_type : error .  (40)
	id : error .  (42)
	number : error .  (47)
	left_brace : error .  (53)
	right_brace : error .  (55)

	$end  reduce 55
	error  reduce 40
	ID  reduce 40
	DATA_TYPE  reduce 53
	IF  reduce 53
	FLOATING_POINT  reduce 53
	INTEGER  reduce 53
	iteration_stmt  reduce 53
	'='  reduce 42
	'<'  reduce 42
	'>'  reduce 42
	'+'  reduce 42
	'-'  reduce 42
	'*'  reduce 42
	'/'  reduce 42
	'%'  reduce 42
	';'  reduce 42
	'('  reduce 42
	'{'  reduce 53
	'}'  reduce 53


state 26
	conditional_stmt : IF . left_parenthesis expr right_parenthesis stmt  (19)

	error  shift 42
	'('  shift 15
	.  error

	left_parenthesis  goto 43


state 27
	number : FLOATING_POINT .  (46)

	.  reduce 46


state 28
	number : INTEGER .  (45)

	.  reduce 45


state 29
	stmt : iteration_stmt .  (17)

	.  reduce 17


state 30
	right_brace : '}' .  (54)

	.  reduce 54


31: shift/reduce conflict (shift 1, reduce 7) on error
31: shift/reduce conflict (shift 2, reduce 7) on DATA_TYPE
state 31
	declaration_list : declaration .  (7)
	declaration_list : declaration . declaration_list  (8)

	error  shift 1
	DATA_TYPE  shift 2
	ID  reduce 7
	IF  reduce 7
	FLOATING_POINT  reduce 7
	INTEGER  reduce 7
	iteration_stmt  reduce 7
	'{'  reduce 7
	'}'  reduce 7

	declaration  goto 31
	data_type  goto 32
	declaration_list  goto 44


state 32
	declaration : data_type . id semi  (6)

	error  shift 10
	ID  shift 11
	.  error

	id  goto 45


33: shift/reduce conflict (shift 46, reduce 21) on error
state 33
	expr : id .  (21)
	expr : id . operator expr  (23)
	expr : id . left_parenthesis right_parenthesis  (24)

	error  shift 46
	'='  shift 47
	'<'  shift 48
	'>'  shift 49
	'+'  shift 50
	'-'  shift 51
	'*'  shift 52
	'/'  shift 53
	'%'  shift 54
	'('  shift 15
	';'  reduce 21
	')'  reduce 21

	left_parenthesis  goto 55
	operator  goto 56
	assignment_op  goto 57
	relational_op  goto 58
	binary_op  goto 59


state 34
	stmt : declaration_list .  (14)

	.  reduce 14


state 35
	stmt : compound_stmts .  (15)

	.  reduce 15


state 36
	compound_stmts : left_brace right_brace .  (10)

	.  reduce 10


state 37
	compound_stmts : left_brace stmt_list . right_brace  (11)

	error  shift 60
	'}'  shift 30
	.  error

	right_brace  goto 61


38: shift/reduce conflict (shift 62, reduce 12) on error
state 38
	stmt_list : stmt . stmt_list  (13)
	stmt_list : .  (12)

	error  shift 62
	ID  shift 11
	DATA_TYPE  shift 2
	IF  shift 26
	FLOATING_POINT  shift 27
	INTEGER  shift 28
	iteration_stmt  shift 29
	'{'  shift 22
	'}'  reduce 12

	declaration  goto 31
	data_type  goto 32
	id  goto 33
	declaration_list  goto 34
	compound_stmts  goto 35
	left_brace  goto 24
	stmt_list  goto 63
	stmt  goto 38
	conditional_stmt  goto 39
	expr  goto 40
	number  goto 41


state 39
	stmt : conditional_stmt .  (16)

	.  reduce 16


state 40
	stmt : expr . semi  (18)

	error  shift 64
	';'  shift 14
	.  error

	semi  goto 65


41: shift/reduce conflict (shift 66, reduce 20) on error
state 41
	expr : number .  (20)
	expr : number . operator expr  (22)

	error  shift 66
	'='  shift 47
	'<'  shift 48
	'>'  shift 49
	'+'  shift 50
	'-'  shift 51
	'*'  shift 52
	'/'  shift 53
	'%'  shift 54
	';'  reduce 20
	')'  reduce 20

	operator  goto 67
	assignment_op  goto 57
	relational_op  goto 58
	binary_op  goto 59


state 42
	left_parenthesis : error .  (49)

	.  reduce 49


state 43
	conditional_stmt : IF left_parenthesis . expr right_parenthesis stmt  (19)

	error  shift 68
	ID  shift 11
	FLOATING_POINT  shift 27
	INTEGER  shift 28
	.  error

	id  goto 33
	expr  goto 69
	number  goto 41


state 44
	declaration_list : declaration declaration_list .  (8)

	.  reduce 8


state 45
	declaration : data_type id . semi  (6)

	error  shift 64
	';'  shift 14
	.  error

	semi  goto 16


46: reduce/reduce conflict (reduce 28, reduce 49) on error
state 46
	operator : error .  (28)
	left_parenthesis : error .  (49)

	error  reduce 28
	ID  reduce 28
	FLOATING_POINT  reduce 28
	INTEGER  reduce 28
	')'  reduce 49


state 47
	assignment_op : '=' .  (29)

	.  reduce 29


state 48
	relational_op : '<' .  (30)

	.  reduce 30


state 49
	relational_op : '>' .  (31)

	.  reduce 31


state 50
	binary_op : '+' .  (32)

	.  reduce 32


state 51
	binary_op : '-' .  (33)

	.  reduce 33


state 52
	binary_op : '*' .  (34)

	.  reduce 34


state 53
	binary_op : '/' .  (35)

	.  reduce 35


state 54
	binary_op : '%' .  (36)

	.  reduce 36


state 55
	expr : id left_parenthesis . right_parenthesis  (24)

	error  shift 18
	')'  shift 19
	.  error

	right_parenthesis  goto 70


state 56
	expr : id operator . expr  (23)

	error  shift 68
	ID  shift 11
	FLOATING_POINT  shift 27
	INTEGER  shift 28
	.  error

	id  goto 33
	expr  goto 71
	number  goto 41


state 57
	operator : assignment_op .  (25)

	.  reduce 25


state 58
	operator : relational_op .  (26)

	.  reduce 26


state 59
	operator : binary_op .  (27)

	.  reduce 27


state 60
	right_brace : error .  (55)

	.  reduce 55


state 61
	compound_stmts : left_brace stmt_list right_brace .  (11)

	.  reduce 11


62: reduce/reduce conflict (reduce 40, reduce 42) on error
62: reduce/reduce conflict (reduce 40, reduce 47) on error
62: reduce/reduce conflict (reduce 40, reduce 53) on error
62: reduce/reduce conflict (reduce 40, reduce 53) on ID
62: reduce/reduce conflict (reduce 42, reduce 47) on '='
62: reduce/reduce conflict (reduce 42, reduce 47) on '<'
62: reduce/reduce conflict (reduce 42, reduce 47) on '>'
62: reduce/reduce conflict (reduce 42, reduce 47) on '+'
62: reduce/reduce conflict (reduce 42, reduce 47) on '-'
62: reduce/reduce conflict (reduce 42, reduce 47) on '*'
62: reduce/reduce conflict (reduce 42, reduce 47) on '/'
62: reduce/reduce conflict (reduce 42, reduce 47) on '%'
62: reduce/reduce conflict (reduce 42, reduce 47) on ';'
state 62
	data_type : error .  (40)
	id : error .  (42)
	number : error .  (47)
	left_brace : error .  (53)

	error  reduce 40
	ID  reduce 40
	DATA_TYPE  reduce 53
	IF  reduce 53
	FLOATING_POINT  reduce 53
	INTEGER  reduce 53
	iteration_stmt  reduce 53
	'='  reduce 42
	'<'  reduce 42
	'>'  reduce 42
	'+'  reduce 42
	'-'  reduce 42
	'*'  reduce 42
	'/'  reduce 42
	'%'  reduce 42
	';'  reduce 42
	'('  reduce 42
	'{'  reduce 53
	'}'  reduce 53


state 63
	stmt_list : stmt stmt_list .  (13)

	.  reduce 13


state 64
	semi : error .  (38)

	.  reduce 38


state 65
	stmt : expr semi .  (18)

	.  reduce 18


state 66
	operator : error .  (28)

	.  reduce 28


state 67
	expr : number operator . expr  (22)

	error  shift 68
	ID  shift 11
	FLOATING_POINT  shift 27
	INTEGER  shift 28
	.  error

	id  goto 33
	expr  goto 72
	number  goto 41


68: reduce/reduce conflict (reduce 42, reduce 47) on error
68: reduce/reduce conflict (reduce 42, reduce 47) on '='
68: reduce/reduce conflict (reduce 42, reduce 47) on '<'
68: reduce/reduce conflict (reduce 42, reduce 47) on '>'
68: reduce/reduce conflict (reduce 42, reduce 47) on '+'
68: reduce/reduce conflict (reduce 42, reduce 47) on '-'
68: reduce/reduce conflict (reduce 42, reduce 47) on '*'
68: reduce/reduce conflict (reduce 42, reduce 47) on '/'
68: reduce/reduce conflict (reduce 42, reduce 47) on '%'
68: reduce/reduce conflict (reduce 42, reduce 47) on ';'
68: reduce/reduce conflict (reduce 42, reduce 47) on ')'
state 68
	id : error .  (42)
	number : error .  (47)

	.  reduce 42


state 69
	conditional_stmt : IF left_parenthesis expr . right_parenthesis stmt  (19)

	error  shift 18
	')'  shift 19
	.  error

	right_parenthesis  goto 73


state 70
	expr : id left_parenthesis right_parenthesis .  (24)

	.  reduce 24


state 71
	expr : id operator expr .  (23)

	.  reduce 23


state 72
	expr : number operator expr .  (22)

	.  reduce 22


state 73
	conditional_stmt : IF left_parenthesis expr right_parenthesis . stmt  (19)

	error  shift 62
	ID  shift 11
	DATA_TYPE  shift 2
	IF  shift 26
	FLOATING_POINT  shift 27
	INTEGER  shift 28
	iteration_stmt  shift 29
	'{'  shift 22
	.  error

	declaration  goto 31
	data_type  goto 32
	id  goto 33
	declaration_list  goto 34
	compound_stmts  goto 35
	left_brace  goto 24
	stmt  goto 74
	conditional_stmt  goto 39
	expr  goto 40
	number  goto 41


state 74
	conditional_stmt : IF left_parenthesis expr right_parenthesis stmt .  (19)

	.  reduce 19


Rules never reduced:
	integer : INTEGER  (43)
	integer : error  (44)
	number : error  (47)
	left_bracket : '['  (56)
	left_bracket : error  (57)
	right_bracket : ']'  (58)
	right_bracket : error  (59)
	comma : ','  (60)
	comma : error  (61)


State 13 contains 1 reduce/reduce conflict.
State 24 contains 2 shift/reduce conflicts.
State 25 contains 22 reduce/reduce conflicts.
State 31 contains 2 shift/reduce conflicts.
State 33 contains 1 shift/reduce conflict.
State 38 contains 1 shift/reduce conflict.
State 41 contains 1 shift/reduce conflict.
State 46 contains 1 reduce/reduce conflict.
State 62 contains 13 reduce/reduce conflicts.
State 68 contains 11 reduce/reduce conflicts.


52 terminals, 28 nonterminals
62 grammar rules, 75 states
